# kaggle_timm_pretrained

./: .gitignore  README.md  pyproject.toml  renovate.json
script/: create_all.sh  download_pretrained.py  init_dataset.py
src/kaggle_timm_pretrained/: patch.py
