[tool.poetry]
name = "kaggle_timm_pretrained"
version = "0.3.3"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
timm = "^0.4.5"

[tool.poetry.dev-dependencies]
pppiv = "^0.1.2"
kaggle = "^1.5.6"
typer = "^0.3.0"
requests = "^2.24.0"
tqdm = "^4.47.0"
black = "^19.10b0"
isort = "^5.0.7"

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
